# Project-Alpha

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md
cmake/: FindLua.cmake  FindLuaJIT.cmake
lib/: CMakeLists.txt
lib/engine/: CMakeLists.txt
lib/engine/include/core/: core.hpp  diceroller.hpp  frame.hpp  location.hpp  locationlogic.hpp  perlinnoise.hpp  randomnumbergenerator.hpp  world.hpp
lib/engine/include/entity/: entity.hpp  monster.hpp  player.hpp
lib/engine/include/enum/: enums.hpp
lib/engine/include/enums/: enums.hpp
lib/engine/include/item/: healingpotion.hpp  inventoryitem.hpp  item.hpp  lootitem.hpp  weapon.hpp
lib/engine/include/quests/: playerquest.hpp  quest.hpp  questcompletionitem.hpp  questlogic.hpp
lib/engine/include/system/: dictionary.hpp  system.hpp
lib/engine/include/terrain/: terrain.hpp  water.hpp
lib/engine/src/: lib.cpp
lib/engine/src/core/: core.cpp  diceroller.cpp  frame.cpp  location.cpp  locationlogic.cpp  perlinnoise.cpp  randomnumbergenerator.cpp  screen.cpp  world.cpp
lib/engine/src/entity/: entity.cpp  monster.cpp  player.cpp
lib/engine/src/item/: healingpotion.cpp  inventoryitem.cpp  item.cpp  lootitem.cpp  weapon.cpp
lib/engine/src/quests/: playerquest.cpp  quest.cpp  questcompletionitem.cpp  questlogic.cpp
lib/engine/src/system/: dictionary.cpp
lib/engine/src/terrain/: terrain.cpp  water.cpp
lib/imgui/: imconfig.h
lib/imgui-sfml/: imgui-SFML.cpp
lib/include/core/: constants.hpp  core.hpp  engine_export.hpp  frame.hpp  frame_game.hpp  frame_stats.hpp  perlinnoise.hpp  randomnumbergenerator.hpp  screen.hpp  sdl_structs.hpp  tiletexture.hpp  worldsaver.hpp
lib/include/core/io/: fileio.hpp  worldloader.hpp  worldsaver.hpp
lib/include/entity/: cursor.hpp  entity.hpp  player.hpp
lib/include/enums/: enums.hpp
lib/include/gfx/: gfx.hpp  renderable.hpp  tiletexture.hpp
lib/include/item/: item.hpp
lib/include/world/: area.hpp  location.hpp  tile.hpp
lib/include/world/special/: specialtile.hpp
lib/include/world/terrain/: grass.hpp  mountain.hpp  snow.hpp  terrain.hpp  wall.hpp  water.hpp
lib/sol/: sol.hpp  sol_forward.hpp
lib/src/core/: core.cpp  diceroller.cpp  frame.cpp  frame_game.cpp  frame_stats.cpp  perlinnoise.cpp  randomnumbergenerator.cpp  screen.cpp  tiletexture.cpp  worldsaver.cpp
lib/src/core/io/: fileio.cpp  worldloader.cpp  worldsaver.cpp
lib/src/entity/: cursor.cpp  entity.cpp  player.cpp
lib/src/gfx/: gfx.cpp  renderable.cpp  tiletexture.cpp
lib/src/item/: item.cpp
lib/src/world/: area.cpp  location.cpp  tile.cpp
lib/src/world/special/: specialtile.cpp
lib/src/world/terrain/: grass.cpp  mountain.cpp  snow.cpp  terrain.cpp  wall.cpp  water.cpp
lib/system/: CMakeLists.txt
main/: CMakeLists.txt
main/include/engine/: lib.hpp
main/src/: main.cpp
protos/: CompileProtos.sh
protos/protos/: world.pb.cc  world.pb.h
protos/src/: world.proto
res/: spritesheet.xcf
sln/Project-Alpha-Win64/: Project-Alpha-Win64.sln
sln/Project-Alpha-Win64/CPPClient/: CPPClient.vcxproj  main.cpp
sln/Project-Alpha-Win64/Engine/: Engine.vcxproj  Engine.vcxproj.filters  constants.hpp  core.cpp  core.hpp  gfx.cpp  gfx.hpp
src/: main.cpp
src/core/: constants.hpp  core.cpp  core.hpp  perlin_noise.cpp  perlin_noise.hpp  random_number_gen.hpp
src/entity/: entity.cpp  entity.hpp  player.cpp  player.hpp
src/gfx/: gfx.cpp  gfx.hpp  renderable.cpp  renderable.hpp  tilemap.cpp  tilemap.hpp
src/world/: area.cpp  area.hpp  location.cpp  location.hpp  tile.cpp  tile.hpp
src/world/terrain/: terrain.cpp  terrain.hpp  terrain_gen.hpp
tools/: CMakeLists.txt
tools/mapgen/: CMakeLists.txt
tools/mapgen/include/mapgen/mcore/: mcore.hpp
tools/mapgen/include/mapgen/mgfx/: mgfx.hpp
tools/mapgen/include/mapgen/mworld/: marea.hpp  mlocation.hpp
tools/mapgen/src/main/: main.cpp
tools/mapgen/src/mcore/: mcore.cpp
tools/mapgen/src/mgfx/: mgfx.cpp
tools/mapgen/src/mworld/: marea.cpp  mlocation.cpp
win-lib/: README.md
